--- a/widget.css
+++ b/widget.css
@@ -8,7 +8,7 @@ body {
 }
 
 .widget-container {
-  width: 300px;
+  width: 350px;
   background-color: #fff;
   border: 1px solid #ccc;
   padding: 10px;
@@ -30,12 +30,8 @@ body {
 }
 
 .current-activity {
-  background: linear-gradient(
-    to right,
-    #00ff00,
-    #800080
-  ); /* Green to Violet gradient */
-  color: rgb(43, 31, 31);
+  background: #1f4172;
+  color: rgb(255, 255, 255);
 }
 
 .all-activity {
